--- a/src/components/NavBar.module.scss
+++ b/src/components/NavBar.module.scss
@@ -1,8 +1,7 @@
 .nav-bar {
   display: flex;
   justify-content: space-between;
-  padding-left: .5rem;
-  padding-right: .5rem;
+  padding: 0 .5rem;
   background-color: #333;
 
   a, button {
